:meat_on_bone: added smooth scroll to fix offset anchor link being out of the viewport

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,7 +28,7 @@ body {
   font-size: 1em;
   height: 100vh;
   justify-content: space-between;
-
+  scroll-behavior: smooth;
   // handle flex box properties of top level children:
   //
   nav {
